fix: search-results pop-up z-index bug

--- a/app/assets/stylesheets/responsive-search-results.scss
+++ b/app/assets/stylesheets/responsive-search-results.scss
@@ -30,13 +30,7 @@
 
 	}
 
-	.pageSearchResults {
 
-		.searchWrapperBig {
-			position: relative;
-			z-index: 2;
-		}
-	}
 
 }
 
